Creation of jenkins-slave and updates for jre
Signed-off-by: Matt Bentley <mbentley@mbentley.net>

--- a/oracle-jre/Dockerfile
+++ b/oracle-jre/Dockerfile
@@ -2,5 +2,4 @@ FROM microsoft/windowsservercore
 
 COPY install_java.ps1 c:/
 RUN powershell -Command "C:\install_java.ps1"
-
-CMD ["C:\\jre7\\bin\\java.exe","-version"]
+RUN setx /M PATH "%PATH%;c:\jre7\bin"
