Added gMSA config example
Signed-off-by: Matt Bentley <mbentley@mbentley.net>

--- a/iis-compose/docker-compose.yml
+++ b/iis-compose/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.2"
 
 services:
   app:
-    image: microsoft/iis:nanoserver
+    image: dtr.demo.dckr.org/official/iis:nanoserver
     deploy:
-      endpoint_mode: dnsrr
+      endpoint_mode: vip
       mode: replicated
       replicas: 1
       labels:
